--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,5 @@
     "dev": "webpack serve"
   },
   "author": "Roman Rudakov",
-  "license": "MIT",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "axios": "^1.7.7"
-  }
+  "license": "MIT"
 }
